--- a/examples/cubes/index.html
+++ b/examples/cubes/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <canvas id="canvas"></canvas>
+    <canvas id="canvas" width="600" height="600"></canvas>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
